# claude-monitor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  mise.toml
crates/cm-app/: Cargo.toml
crates/cm-app/src/: lib.rs  main.rs  server.rs  state.rs  tailer.rs
crates/cm-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/cm-app/src-tauri/icons/: gen.py  icon.icns
crates/cm-app/src-tauri/src/: main.rs
crates/cm-app/tests/: integration.rs
crates/cm-app/ui/: app.js  index.html  styles.css
crates/cm-cli/: Cargo.toml
crates/cm-cli/src/: install.rs  main.rs
crates/cm-cli/tests/: cli.rs
crates/cm-core/: Cargo.toml
crates/cm-core/src/: config.rs  db.rs  lib.rs  paths.rs  pricing.rs  schema.rs  transcript.rs
crates/cm-core/tests/: db_roundtrip.rs  pricing.rs  transcript_parser.rs
crates/cm-core/tests/fixtures/: assistant_lines.jsonl
