[workspace]
resolver = "2"
members = [
    "crates/cm-core",
    "crates/cm-cli",
    "crates/cm-app",
    "crates/cm-app/src-tauri",
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
directories = "5"
