[package]
name = "cm-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cm-app"
path = "src/main.rs"

[dependencies]
cm-core = { path = "../cm-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6"
futures-util = "0.3"
