[package]
name = "cm-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cm"
path = "src/main.rs"

[dependencies]
cm-core = { path = "../cm-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", default-features = false, features = ["json"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
