[package]
name = "cm-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

license.workspace = true

[dev-dependencies]
tempfile = "3"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
directories.workspace = true
toml = { version = "0.8", default-features = false, features = ["parse"] }
globset = "0.4"
