[package]
name = "cm-app-tauri"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native window wrapper for cm-app"

[[bin]]
name = "cm-app-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cm-app = { path = ".." }
anyhow.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tauri = { version = "2", features = ["tray-icon"] }
tracing = "0.1"
